Enable fetching from materialized view #2
