# controller/pg.go
@@ -5,22 +5,30 @@ import (
 	"github.com/Gravity-Hub-Org/gravity-node-api-mockup/v2/model"
 	"github.com/Gravity-Hub-Org/gravity-node-api-mockup/v2/utils"
 	"github.com/go-pg/pg"
+	migrations "github.com/Gravity-Hub-Org/gravity-node-api-mockup/v2/migrations"
 )
 
 type DBController struct {
 	DB *pg.DB
 }
 
+const (
+	materializedViewPostfix = "_materialized_view"
+)
+
 func (dbc *DBController) PersistMockup () {
 	nebulas, nodes := utils.GetMockup()
 
 	dbc.persistNebulas(nebulas)
 	dbc.persistNodes(nodes)
+
+	migrations.UpdateMaterializedViewQuery(model.DefaultExtendedDBTableNames.Nebulas)
+	migrations.UpdateMaterializedViewQuery(model.DefaultExtendedDBTableNames.Nodes)
 }
 
 func (dbc *DBController) errorHandle (prefix string, err error) {
 	if err != nil {
-		fmt.Printf("%v; Error occured: %v\n", prefix, err)
+		fmt.Printf("Method: %v; Error occured: %v\n", prefix, err)
 	}
 }
 
@@ -58,4 +66,30 @@ func (dbc *DBController) AllNodesList () *[]*model.Node {
 	dbc.errorHandle("AllNodesList", err)
 
 	return &list
+}
+
+func (dbc *DBController) mapTableToMaterializedView(tableName string) string {
+	return tableName + materializedViewPostfix
+}
+
+func (dbc *DBController) ExactNode (address string) *model.Node {
+	var node model.Node
+
+	destination := dbc.mapTableToMaterializedView(model.DefaultExtendedDBTableNames.Nodes)
+
+	_, err := dbc.DB.Query(&node, fmt.Sprintf("SELECT * FROM %v WHERE address = '%v';", destination, address))
+	dbc.errorHandle("ExactNode", err)
+
+	return &node
+}
+
+func (dbc *DBController) ExactNebula (address string) *model.Nebula {
+	var nebula model.Nebula
+
+	destination := dbc.mapTableToMaterializedView(model.DefaultExtendedDBTableNames.Nebulas)
+
+	_, err := dbc.DB.Query(&nebula, fmt.Sprintf("SELECT * FROM %v WHERE address = '%v';", destination, address))
+	dbc.errorHandle("ExactNebula", err)
+
+	return &nebula
 }
